# fabriken

./: Cargo.toml  ritning.yaml
agent/: Cargo.toml
agent/src/: main.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs
common/src/channels/: exec.rs  global.rs  mod.rs  sched.rs
common/src/executor/: default.rs  mod.rs
common/src/executor/executors/: container.rs  default.rs  mod.rs  step.rs
common/src/executor/runners/: mod.rs  noop.rs  podman.rs
common/src/models/: build_definition.rs  context.rs  mod.rs
common/src/parser/: mod.rs  pipeline.rs
common/src/proto/startup/: startup_service.proto  startup_types.proto
common/src/runtime/: default.rs  mod.rs
common/src/scheduler/: default.rs  mod.rs
controller/: Cargo.toml
controller/src/: main.rs
controller/src/features/: agent_info.rs  agent_repository.rs  healthcheck_service.rs  mod.rs  registration_service.rs
