[workspace]
members = [
    "common",
    "agent"
, "controller"]

resolver = "3"

[workspace.dependencies]
tokio = "1.50.0"
tokio-stream = "0.1.18"
async-trait = "0.1.89"
anyhow = "1.0.102"

ascii-petgraph = "0.2.0"

chrono = "0.4.44"
indexmap = "2.13.0"
petgraph = "0.8.3" 

serde = "1.0.228"
serde_yaml = "0.9.34"
serde_json = "1.0.149"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"

axum = "0.8.8"
axum-extra = "0.12.5"
tonic = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.5"

