[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tonic-prost.workspace = true
tonic-health.workspace = true
