[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true, features = ["std", "serde"] }
petgraph = { workspace = true, features = ["std", "graphmap"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace= true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3"
tonic-prost-build = "0.14.5"
